--- a/src/CSS/SelectMovie.css
+++ b/src/CSS/SelectMovie.css
@@ -6,8 +6,13 @@
 .SM_main_container{
     width: 100%;
     display: flex;
-    justify-content:  flex-start;
+    justify-content:  flex-start; 
     flex-wrap: wrap;
     margin-bottom: 20px;
     color: black;
+    border-radius: 10px;
+}
+.SM_main_container:hover{
+    background-color: lightseagreen;
+    border-style: dotted;
 }
