--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -3,10 +3,13 @@
     margin:  30px auto;
     padding:  30px 30px 0px 30px;
     background-color:beige;
-    border:  1px solid black;
-    border-radius: 5px;
+    border:  4px solid black;
+    border-radius: 10px;
     color: black;
     box-shadow: 5px 5px 5px rgba(199, 207, 224, 0.6);
+}
+.container:hover{
+    background-color:lavender;
 }
 
 .select_movie_container{
