--- a/src/CSS/RadioComponent.css
+++ b/src/CSS/RadioComponent.css
@@ -6,6 +6,26 @@
     border-radius: 10px;
     border-style:solid;
 }
+.form-check-label.active{
+    background-color: green;
+    font-weight: 600;
+    user-select: none;
+    letter-spacing: 0.5px;
+    border-radius: 1px;
+    cursor: pointer;
+}
+.form-check-label.inactive{
+    user-select: none;
+    cursor: pointer;
+    letter-spacing: 0.5px;
+    opacity: 0.95;
+    text-align: center;
+    border-radius: 5px;
+}
+.inactive:hover{
+    background-color: red;
+    opacity: 0.95;
+}
 .text{
     font-size: 17px;
     text-align: center;
